gitops/manifests/shlink-web/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    avp.kubernetes.io/path: "secret/data/shlink"
  labels:
    io.kompose.service: shlink-web
  name: shlink-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shlink-web
  strategy: {}
  template:
    metadata:
      annotations: {}
      labels:
        io.kompose.network/shlink-default: "true"
        io.kompose.service: shlink-web
        app.kubernetes.io/name: shlink-web
    spec:
      containers:
        - env:
            - name: SHLINK_SERVER_API_KEY
              value: <SHLINK_SERVER_API_KEY>
            - name: SHLINK_SERVER_URL
              value: https://<SHLINK_SERVER_URL>
          image: shlinkio/shlink-web-client
          name: shlink-web
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    io.kompose.service: shlink-web
  name: shlink-web
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: shlink-web
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shlink-web-ingress
  namespace: shlink
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`shlink-web.local.timmybtech.com`)
      kind: Rule
      services:
        - name: shlink-web
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls
